# ACA_GraphML_Project

./: .gitignore  GDL_PIPELINE_README.md  GNN_Testing_Summary.md  MANIFEST.in  README.md  REGRESSOR_IMPLEMENTATION.md  pyproject.toml  pytest.ini  test_filtering_transform.py  test_regressor.py
Notebooks/: 1 - DatasetAnalysis.ipynb  2 - FeatureSelection.ipynb  DatasetAnalysis.ipynb  FeatueBasedRegression.ipynb  FeatureBasedRegression2.ipynb  FeatureSelection.ipynb  GNN_test.ipynb  GNN_test_edges.ipynb  KAGGLE_SETUP_GUIDE.md  KaggleNotebook.ipynb  LoopDetection.ipynb  Study_Analysis.ipynb  evaluations.json  pipelineTest.ipynb  pipelineTest2.ipynb  pipelineTest2_wandb.ipynb  pipelineTest3_optuna+w&b.ipynb  pipelineTest3_optuna.ipynb  test.ipynb  test_HGPSL.ipynb
Notebooks/checkpoints/: epoch=0-step=310-v2.ckpt  epoch=0-step=310-v3.ckpt
examples/: complete_pipeline_example.py  gdl_pipeline_lightning_example.py
kaggle_optuna_project/: KAGGLE_DEPLOYMENT_GUIDE.md  KAGGLE_NOTEBOOK_TEMPLATE.py  KAGGLE_TEST_RUN_GUIDE.md  README.md  deploy_to_kaggle.py  optuna_multiobjective_optimization.py  quick_test_kaggle.py  requirements.txt  setup_kaggle_project.py  test_local_optimization.py  test_supabase_integration.py  test_wandb_auth.py
kaggle_optuna_project/configs/: optimization_config.yaml
kaggle_optuna_project/src/: performance_monitor.py  pipeline_components.py  supabase_integration.py  utils.py
kaggle_optuna_project/wandb/run-20250628_200602-k9ojz43i/: run-k9ojz43i.wandb
src/ACAgraphML/: Dataset.py  README.md  __init__.py  utils.py
src/ACAgraphML.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: run_gdl_pipeline_tests.py  run_gnn_tests.py  run_lightning_module_tests.py  test.py  test_BONDataset.py  test_DataAugmenter.py  test_GDLPipeline.py  test_GDLPipelineLightningModule.py  test_GDLPipelineLightningModule_benchmark.py  test_GDLPipeline_benchmark.py  test_GDLPipeline_integration.py  test_GNNmodel.py  test_GNNmodel_benchmark.py  test_GNNmodel_integration.py  test_Pooling.py  test_Regressor.py  test_add_master_node.py  test_edge_fix.py
(+46 files in other folders)
