[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ACAgraphML"
version = "0.0.1"
authors = [{ name = "Paolo Ginefra", email = "paolo.ginefra@gmail.com" }]
description = "A small package for my ACA Grph ML project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/PaoloGinefra/ACA_GraphML_Project"
Issues = "https://github.com/PaoloGinefra/ACA_GraphML_Project/issues"
