[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ACAgraphML"
version = "0.0.1"
authors = [{ name = "Paolo Ginefra", email = "paolo.ginefra@gmail.com" }]
description = "A small package for my ACA Graph ML project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "networkx>=2.6",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
optuna = ["optuna>=3.3.0"]
wandb = ["wandb>=0.15.0"]
kaggle = ["kaggle>=1.5.12"]
chemistry = ["rdkit-pypi>=2022.3.5"]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/PaoloGinefra/ACA_GraphML_Project"
Issues = "https://github.com/PaoloGinefra/ACA_GraphML_Project/issues"
Repository = "https://github.com/PaoloGinefra/ACA_GraphML_Project.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ACAgraphML*"]

[tool.setuptools.package-dir]
"" = "src"
